# Dx11SDL

./: .gitignore  CMakeLists.txt  NextSteps.txt  README.md  compile_commands.json  imgui.ini  main.cpp  make.bat
data/AnorLando/: m0000B1A15.mtl  m0010B1A15.mtl  m1000B1A15.mtl  m2000B1A15.mtl  m2100B1A15.mtl  m2150B1A15.mtl  m2200B1A15.mtl  m2300B1A15.mtl  m2301B1A15.mtl  m2310B1A15.mtl  m2315B1A15.mtl  m2320B1A15.mtl  m2325B1A15.mtl  m2330B1A15.mtl  m2340B1A15.mtl  m2341B1A15.mtl  m2350B1A15.mtl  m2400B1A15.mtl  m2500B1A15.mtl  m2600B1A15.mtl  m3000B1A15.mtl  m3001B1A15.mtl  m3050B1A15.mtl  m3200B1A15.mtl  m3201B1A15.mtl  m3202B1A15.mtl  m3310B1A15.mtl  m3312B1A15.mtl  m3313B1A15.mtl  m3330B1A15.mtl  m3331B1A15.mtl  m3340B1A15.mtl  m3350B1A15.mtl  m3360B1A15.mtl  m3370B1A15.mtl  m3400B1A15.mtl  m3401B1A15.mtl  m3410B1A15.mtl  m3500B1A15.mtl  m3510B1A15.mtl  (+19 more)
data/Asylum/: m0000B1A18.mtl  m0001B1A18.mtl  m0005B1A18.mtl  m0010B1A18.mtl  m0015B1A18.mtl  m0020B1A18.mtl  m0030B1A18.mtl  m0035B1A18.mtl  m0040B1A18.mtl  m0041B1A18.mtl  m0045B1A18.mtl  m0046B1A18.mtl  m0050B1A18.mtl  m0060B1A18.mtl  m0061B1A18.mtl  m0062B1A18.mtl  m0070B1A18.mtl  m0080B1A18.mtl  m0090B1A18.mtl  m0100B1A18.mtl  m0110B1A18.mtl  m0120B1A18.mtl  m0130B1A18.mtl  m0140B1A18.mtl  m0150B1A18.mtl  m0200B1A18.mtl  m0201B1A18.mtl  m0210B1A18.mtl  m0300B1A18.mtl  m0301B1A18.mtl  m0310B1A18.mtl  m0320B1A18.mtl  m5000B1A18.mtl  m5001B1A18.mtl  m5010B1A18.mtl  m5100B1A18.mtl  m5101B1A18.mtl  m5200B1A18.mtl  m5201B1A18.mtl  m9000B1A18.mtl  (+2 more)
data/Gogon/: gongon_high.mtl
data/Krool/: Backpack.FBX  Backpack.SMD  Backpack_OpenCollada.DAE  Blunderbuss.FBX  Blunderbuss.SMD  Blunderbuss_OpenCollada.DAE  Crown.FBX  Crown.SMD  Crown_OpenCollada.DAE  IronBall.FBX  IronBall.SMD  IronBall_OpenCollada.DAE  KingKRool.SMD  KingKRool_Belly.SMD  KingKRool_BellyArmor.SMD  KingKRool_BellyCrack.SMD  KingKRool_Crown.SMD  KingKRool_EyelidL1_HalfBlink.SMD  KingKRool_EyelidL2_HalfBlink2.SMD  KingKRool_EyelidL3_Blink.SMD  KingKRool_EyelidR1_HalfBlink.SMD  KingKRool_EyelidR2_HalfBlink2.SMD  KingKRool_EyelidR3_Blink.SMD  KingKRool_Eyes1-3_Pupils.SMD  KingKRool_Eyes1_FaceN.SMD  KingKRool_Eyes2_Talk.SMD  KingKRool_Eyes3_HeavyAttack.SMD  KingKRool_Eyes4_Attack.SMD  KingKRool_Eyes4_Attack_Pupils.SMD  KingKRool_Eyes5_Ouch.SMD  KingKRool_Eyes5_Ouch_Pupils.SMD  KingKRool_Eyes6_Ottotto.SMD  KingKRool_Eyes6_Ottotto_Pupils.SMD  KingKRool_GloveL.SMD  KingKRool_GloveR.SMD  KingKRool_Mouth1_FaceN.SMD  KingKRool_Mouth2_Ouch.SMD  KingKRool_Mouth3_Cliff.SMD  PirateHat.FBX  PirateHat.SMD  (+2 more)
imgui/: imconfig.h.gch  imgui.h.gch  imgui_impl_dx11.h.gch  imgui_impl_sdl.cpp  imgui_impl_sdl.h.gch  imgui_internal.h.gch  imstb_rectpack.h.gch  imstb_textedit.h.gch  imstb_truetype.h.gch
include/: App.h  App.h.gch  Dx11Renderer.h  ModelData.h  ObjReader.h  RendererUtils.h
shaders/: basePass.hlsl  baseShaders.hlsl  shadowPass.hlsl
src/: App.cpp  Dx11Renderer.cpp  ObjReader.cpp  RendererUtils.cpp  main.cpp
